--- a/css/style.css
+++ b/css/style.css
@@ -71,14 +71,14 @@
 }
 
 .close {
-  float: right;
+  position: absolute;
   font-weight: 700;
   font-size: 15px;
   line-height: 15px;
   opacity: 0.6;
   cursor: pointer;
-  margin-top: -19px;
-  margin-right: 16px;
+  top: 19px;
+  right: 19px;
 }
 
 .close:hover {
@@ -968,11 +968,74 @@
   content: url(../img/cart-link.svg);
 }
 
-.hide {
-  display: none;
+.carts {
+  min-height: 998px;
+  padding-top: 56px;
+  padding-bottom: 128px;
 }
 
-.show {
-  display: block;
+.carts .left-cart-block {
+  max-width: 57%;
+}
+
+.carts .left-cart-block .cart {
+  box-shadow: 17px 19px 24px rgba(0, 0, 0, 0.13);
+  height: 306px;
+  margin-top: 40px;
+  padding: 0;
+  border: none;
+}
+
+.carts .left-cart-block .cart .cart-image {
+  height: 100%;
+  width: 262px;
+}
+
+.carts .left-cart-block .cart .cart-info {
+  position: relative;
+  padding: 22px 22px 0 31px;
+  height: 100%;
+  min-width: 390px;
+}
+
+.carts .left-cart-block .cart .cart-info .cart-info-heading {
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 29px;
+  width: 60%;
+  margin-bottom: 42px;
+}
+
+.carts .left-cart-block .cart .cart-info .cart-info-items {
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 26px;
+  color: #575757;
+}
+
+.carts .left-cart-block .cart .cart-info .cii-price {
+  color: #F16D7F;
+}
+
+.carts .left-cart-block .cart .cart-info .quantity {
+  width: 200px;
+}
+
+.carts .left-cart-block .cart .cart-info .quantity .qua-lable {
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 26px;
+  color: #575757;
+}
+
+.carts .left-cart-block .cart .cart-info .quantity .qty {
+  margin-left: 24px;
+  border: 1px solid #EAEAEA;
+  width: 43px;
+  text-align: center;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  color: #6F6E6E;
 }
 /*# sourceMappingURL=style.css.map */
