--- a/css/style.sass
+++ b/css/style.sass
@@ -79,6 +79,7 @@ $gray: #6F6E6E
 
   &:hover
     opacity: 1
+    color: $pink
 
 .menu-heading
   @include fonts(700,14px,17px)
@@ -811,6 +812,7 @@ $gray: #6F6E6E
   min-height: 998px
   padding-top: 56px
   padding-bottom: 128px
+  box-sizing: border-box
   .left-cart-block
     max-width: 57%
     .cart
@@ -819,6 +821,10 @@ $gray: #6F6E6E
       margin-top: 40px
       padding: 0
       border: none
+      cursor: pointer
+      -moz-transition: all 1s ease-out
+      -o-transition: all 1s ease-out
+      -webkit-transition: all 1s ease-out
       .cart-image
         height: 100%
         width: 262px
@@ -848,6 +854,58 @@ $gray: #6F6E6E
             text-align: center
             @include fonts(400,18px,22px)
             color: $gray
+            outline: none
+
+    .cart:hover
+      -webkit-transform: scale(1.02)
+      -moz-transform: scale(1.02)
+      -o-transform: scale(1.02)
+    .clb-bottons
+      margin-top: 72px
+    .clb-botton
+      @include fonts(300,14px,17px)
+      border: 1px solid #A4A4A4
+      text-decoration: none
+      color: $dark
+      padding: 16px 40px
+      background-color: $white
+    .clb-botton:hover
+      border: 1px solid $pink
+      color: $pink
+  .right-cart-block
+    max-width: 32%
+    margin-top: 57px
+    .rcb-form
+      width: 100%
+
+      .form-heading
+        float: left
+        @include fonts(300,16px,19px)
+
+      .country
+        margin-top: 20px
+        @include fonts(300,13px,16px)
+        padding: 14px 16px
+        border: 1px solid #A4A4A4
+        width: 100%
+        outline: none
+      .state::placeholder
+        color: $dark
+      .get-button
+        padding: 10px 14px
+        width: 100px
+        color: $gray
+        background-color: $white
+        @include fonts(300,11px,13px)
+      .get-button:hover
+        border: 1px solid $pink
+        color: $pink
+    .total
+      margin-top: 57px
+      width: 100%
+      min-height: 214px
+      background-color: #F5F3F3
+      padding: 40px 34px
 
 // .hide
 //   display: none
