--- a/css/style.sass
+++ b/css/style.sass
@@ -138,7 +138,7 @@ $gray: #6F6E6E
   &-item
     background-blend-mode: multiply
     text-align: center
-    width: 360px
+    width: 31.5%
     height: 260px
     padding: 103px
     text-decoration: none
@@ -170,15 +170,24 @@ $gray: #6F6E6E
 
 .tii-first
   background: url(../img/Picture_1.jpg) rgba(0, 0, 0, 0.6)
+  background-size: 100% 100%
+  background-position: center
+  background-size: contain
 
 .tii-second
   background: url(../img/Picture_2.jpg) rgba(0, 0, 0, 0.6)
+  background-size: contain
+  background-position: center
 
 .tii-third
   background: url(../img/Picture_3.jpg) rgba(0, 0, 0, 0.6)
+  background-size: contain
+  background-position: center
 
 .tii-fourth
   background: url(../img/Picture_4.jpg) rgba(0, 0, 0, 0.6)
+  background-size: 100% 100%
+  background-position: center
 
 .top-lable
   @include fonts(400,16px,19px)
@@ -216,7 +225,7 @@ $gray: #6F6E6E
   margin-bottom: 30px
 
   .item
-    width: 360px
+    width: 100%
     position: relative
     -moz-transition: all 1s ease-out
     -o-transition: all 1s ease-out
@@ -340,7 +349,7 @@ $gray: #6F6E6E
     color: #FBFBFB
     max-width: 360px
 
-.five-section
+.top-footer-block
   background: url(../img/Five-image.jpg)
   background-size: 100% 100%
   background-position: center
@@ -410,7 +419,7 @@ $gray: #6F6E6E
   margin-left: -4px
   cursor: pointer
 
-.footer
+.footer-bottom
   background: $dark
   height: 80px
   padding: 30px 0
