--- a/css/style.sass
+++ b/css/style.sass
@@ -68,6 +68,11 @@ $gray: #6F6E6E
   float: right
   z-index: 12
   box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21)
+  .top-menu-links
+    display: none !important
+    margin-bottom: 16px
+    .li-tml
+      margin-left: 0
 
 .close
   position: absolute
